# atlas-humanoid-robot

./: CMakeLists.txt  README.md  atlas.py  atlas_scratch.py  pyproject.toml  vcpkg.json
data/botlab/: splitobj.py
include/atlas/: log.h
include/atlas/bullet/: api.h  api.hpp  client.h  clock.h  data.h
python/: bullet.py  entrypoint.py  env.py  start.py
python/pybullet_api/: __init__.py  api.py  data.py
scripts/: cpplint.py
src/: log.cc  main.cc
src/bullet/: api.cc  bullet.cc  client.cc  clock.cc
